--- a/pokedex-vite/src/components/HomeContent/index.module.css
+++ b/pokedex-vite/src/components/HomeContent/index.module.css
@@ -1,6 +1,6 @@
 .section {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 
     width: 100%;
     height: 87vh;
@@ -11,10 +11,28 @@
 .article {
     display: flex;
     flex-direction: column;
+    padding-left: 107px;
+    gap: 17px;
 }
 
-.button_size {
+.button_container {
     
+}
+
+.button {
+    width: 231px;
+    height: 66px;
+
+    box-shadow: inset 0px -9px 0px rgba(0, 0, 0, 0.18);
+    border-radius: 11px;
+    background: var(--light-green);
+    border: none;
+
+    font-family: 'Karla';
+    font-size: 23px;
+    font-weight: 700;
+    text-align: center;
+    cursor: pointer;
 }
 
 h1 {
@@ -35,4 +53,8 @@ p {
     font-size: 32px;
     width: 506px;
     margin: 0;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 820px) {
+
 }
