--- a/pokedex-vite/src/components/Header/index.module.css
+++ b/pokedex-vite/src/components/Header/index.module.css
@@ -42,6 +42,16 @@
     width: 169px;
 }
 
+.menu {
+    display: none;
+    background: var(--yellow-third);
+}
+.teste{
+    display: flex;
+    flex-direction: column;
+    background: var(--yellow-third)!important;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1007px) {
     .img {
         height: 45px;
@@ -52,11 +62,20 @@
         font-size: 19px;
     }
 
+    
+
 }
 
 @media only screen and (max-width: 767px) {
+    .header {
+        gap: 233px;
+    }
     .article {
         display: none;
+    }
+
+    .menu {
+        display: flex;
     }
 
 }
