--- a/pokedex-vite/src/components/Pokedex/index.module.css
+++ b/pokedex-vite/src/components/Pokedex/index.module.css
@@ -7,11 +7,10 @@
 }
 
 .title h1 {
-
-
     font-family: 'Karla';
     font-size: 35px;
     font-weight: 400;
+    width: 48vw;
     margin: 0;
 
 }
